# compiletools

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BUG-prebuild-script-conf-layering.md  CLAUDE.md  INSTALL  NOTES.md  README.coders  cleanup-remote-locks.sh  contributing.html  copyright  ct-release  diagnose_double_opens.sh  genindex.html  index.html  objects.inv  profile_ct_cake_worktree.py  prompt.txt  pyproject.toml  search.html  searchindex.js  tools.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  tools.doctree
.doctrees/_generated/: ct-backends.doctree  ct-build-docs.doctree  ct-build-dynamic-library.doctree  ct-build-static-library.doctree  ct-build.doctree  ct-cake.doctree  ct-cleanup-locks.doctree  ct-commandline.doctree  ct-compilation-database.doctree  ct-config.doctree  ct-cppdeps.doctree  ct-create-makefile.doctree  ct-doc.doctree  ct-filelist.doctree  ct-findtargets.doctree  ct-git-sha-report.doctree  ct-gitroot.doctree  ct-headertree.doctree  ct-jobs.doctree  ct-list-backends.doctree  ct-list-variants.doctree  ct-lock-helper.doctree  ct-magicflags.doctree  ct-pytest-monitor.doctree  ct-release.doctree  ct-termux-install.doctree  ct-timing-report.doctree  ct-trim-cache.doctree  ct-watch-build.doctree
.github/workflows/: ci.yml  docs.yml
_generated/: ct-backends.html  ct-build-docs.html  ct-build-dynamic-library.html  ct-build-static-library.html  ct-build.html  ct-cake.html  ct-cleanup-locks.html  ct-commandline.html  ct-compilation-database.html  ct-config.html  ct-cppdeps.html  ct-create-makefile.html  ct-doc.html  ct-filelist.html  ct-findtargets.html  ct-git-sha-report.html  ct-gitroot.html  ct-headertree.html  ct-jobs.html  ct-list-backends.html  ct-list-variants.html  ct-lock-helper.html  ct-magicflags.html  ct-pytest-monitor.html  ct-release.html  ct-termux-install.html  ct-timing-report.html  ct-trim-cache.html  ct-watch-build.html
_sources/: tools.rst.txt
_sources/_generated/: ct-backends.rst.txt  ct-build-docs.rst.txt  ct-build-dynamic-library.rst.txt  ct-build-static-library.rst.txt  ct-build.rst.txt  ct-cake.rst.txt  ct-cleanup-locks.rst.txt  ct-commandline.rst.txt  ct-compilation-database.rst.txt  ct-config.rst.txt  ct-cppdeps.rst.txt  ct-create-makefile.rst.txt  ct-doc.rst.txt  ct-filelist.rst.txt  ct-findtargets.rst.txt  ct-git-sha-report.rst.txt  ct-gitroot.rst.txt  ct-headertree.rst.txt  ct-jobs.rst.txt  ct-list-backends.rst.txt  ct-list-variants.rst.txt  ct-lock-helper.rst.txt  ct-magicflags.rst.txt  ct-pytest-monitor.rst.txt  ct-release.rst.txt  ct-termux-install.rst.txt  ct-timing-report.rst.txt  ct-trim-cache.rst.txt  ct-watch-build.rst.txt
docs/: conf.py  contributing.rst  index.rst
docs/plans/: 2026-03-20-alternate-backends.md  early-tests.md
docs/superpowers/specs/: 2026-04-06-build-timing-reports-design.md
plans/: 00-prerequisites-safety-nets.md  01-decompose-build-graph.md  02-split-build-backend.md  03-split-apptools.md  04-break-import-cycle.md  05-wrappedos-contract-lint.md  README.md
profiles_worktree/: master_make_cppflags_macros.prof  master_make_factory.prof  master_make_lotsofmagic.prof  master_make_numbers.prof  master_make_simple.prof  master_shake_cppflags_macros.prof  master_shake_factory.prof  master_shake_lotsofmagic.prof  master_shake_numbers.prof  master_shake_simple.prof
scripts/: create-documentation  ct-build  ct-build-docs  ct-lock-helper  ct-lock-helper-py  ct-pytest-monitor  ct-release  ct-stress-test  ct-termux-install  ct-venv-install-rhel8  ct-venv-install-termux  ct-watch-build  profile-ct  profile-ct-cake  profile-ct-cake-modes  profile-ct-cake-worktree  profile-ct-compilation-database
src/compiletools/: CLAUDE.md  README.cleanup-remote-locks.rst  README.create-documentation.rst  README.ct-backends.rst  README.ct-build-docs.rst  README.ct-build-dynamic-library.rst  README.ct-build-static-library.rst  README.ct-build.rst  README.ct-cache-clean.rst  README.ct-cache-report.rst  README.ct-cache.rst  README.ct-cake.rst  README.ct-cas-publish.rst  README.ct-check-venv.rst  README.ct-cleanup-locks.rst  README.ct-commandline.rst  README.ct-compilation-database.rst  README.ct-config.rst  README.ct-cppdeps.rst  README.ct-create-makefile.rst  README.ct-debug-pcm-hash-inputs.rst  README.ct-doc.rst  README.ct-fetch.rst  README.ct-filelist.rst  README.ct-findtargets.rst  README.ct-git-sha-report.rst  README.ct-gitroot.rst  README.ct-headertree.rst  README.ct-jobs.rst  README.ct-list-backends.rst  README.ct-list-variants.rst  README.ct-lock-helper.rst  README.ct-magicflags.rst  README.ct-otel.rst  README.ct-pytest-monitor.rst  README.ct-release.rst  README.ct-stress-test.rst  README.ct-termux-install.rst  README.ct-timing-report.rst  README.ct-trim-cache.rst  (+253 more)
src/compiletools/ct.conf.d/: asan.conf  c11.conf  c17.conf  c23.conf  c99.conf  ccache-clang.conf  ccache-gcc.conf  cfi.conf  ci.conf  clang.conf  clang.debug.conf  clang.release.conf  coverage.conf  ct.conf  cxx11.conf  cxx14.conf  cxx17.conf  cxx20.conf  cxx23.conf  cxx26.conf  debug.conf  dev.conf  fastmath.conf  gcc.conf  gcc.release.conf  gold-nommap.conf  gold.conf  hardened.conf  ld.conf  libcxx.conf  lto.conf  m32.conf  m64.conf  mold.conf  msan.conf  native.conf  noexceptions.conf  nortti.conf  perf.conf  pgo-gen.conf  (+16 more)
src/compiletools/examples-end-to-end/appinfo/: README.md  appinfo.hpp  build.sh  gen_appinfo.sh  main.cpp
src/compiletools/examples-end-to-end/cache_scoping/: header_ref.hpp  tu_via_header.cpp
src/compiletools/examples-end-to-end/calculator/: add.C  calculator.h  main.cpp
src/compiletools/examples-end-to-end/cli_features/: README.md  alpha.cpp  gamma.cpp
src/compiletools/examples-end-to-end/computed_include/: windows_extra.h
src/compiletools/examples-end-to-end/cppflags_macros/: arm_feature.hpp  armcc_feature.hpp  basic_feature.hpp  intel_feature.hpp  (+8 more)
src/compiletools/otel/: __init__.py  _connection.py  aggregates.py  metrics.py  test_aggregates.py  test_connection.py  test_metrics.py  test_traces.py  traces.py
src/compiletools/samples/: test_magicflags.py
(+302 files in other folders)
